# EcLang

./: .gitignore  CMakeLists.txt  README.md  TODO.md  testEntry.cpp
include/: auiistrings.hpp  compilerSettings.hpp  eclang.hpp  instructionstrings.hpp  meatgrinder.hpp
include/classes/: attribute.hpp  class.hpp  eclangClass.hpp  language.hpp  languageDescriptor.hpp  object.hpp  vectors.hpp
src/: attribute.cpp  auiistrings.cpp  class.cpp  compilerSettings.cpp  constants.hpp  eclangClass.cpp  instructionstrings.cpp  language.cpp  languageDescriptor.cpp  meatgrinder.cpp  object.cpp  stringutils.cpp  stringutils.hpp  vectors.cpp
src/base/: attribute.cpp  attribute.hpp  class.cpp  class.hpp  eclangBase.hpp  languageDescriptor.cpp  languageDescriptor.hpp
src/config/: globalConfig.cpp  globalConfig.hpp
src/util/: globalConfig.cpp  globalConfig.hpp  lexer.cpp  lexer.hpp  stringUtils.cpp  stringUtils.hpp  token.hpp
